# tretter

./: README.md  conftest.py  pyproject.toml  requirements.txt
sample_responses/: api-weather-gov-stations-station-observation-latest.json  data-weather-gov-hk-weatherapi-opendata-weatherphp.json
src/: main.py
src/connectors/: HkoConnector.py  NwsConnector.py  types.py
src/connectors/helpers/: request.py
tests/: test_hko_connector.py  test_nws_connector.py
