[project]
name = "tretter"
version = "0.1.0"
description = "weather"
readme = "README.md"
dependencies = [
    "certifi==2026.2.25",
    "charset-normalizer==3.4.7",
    "h11==0.16.0",
    "idna==3.11",
    "jh2==5.0.11",
    "niquests==3.18.5",
    "python-dotenv==1.2.2",
    "qh3==1.7.1",
    "responses>=0.26.0",
    "ty==0.0.29",
    "urllib3==2.6.3",
    "urllib3-future==2.19.906",
    "wassima==2.0.6",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ty>=0.0.29",
]

[tool.ty.environment]
root = ["./src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
filterwarnings = [
    "ignore:SOCKS support in urllib3.*",
]
